--- a/src/net/yapbam/gui/tools/messages.properties
+++ b/src/net/yapbam/gui/tools/messages.properties
@@ -18,4 +18,4 @@ ToolsPlugin.currencyConverter.wait.message=<html>Download of currency from the E
 
 #Adds a calculator in the tools menu
 ToolsPlugIn.calculator.title=Calculator
-ToolsPlugIn.calculator.toolTip=Opens a calculator
+ToolsPlugIn.calculator.toolTip=Abre uma calculadora
