--- a/src/net/yapbam/gui/tools/messages_de.properties
+++ b/src/net/yapbam/gui/tools/messages_de.properties
@@ -14,3 +14,10 @@ CurrencyConverterPanel.CodeColumnName=Code
 CurrencyConverterPanel.CurrencyColumnName=W\u00e4hrung
 CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? W\u00e4hrung
+
+#-------------------------------------------------------
+# Added or modified since last translation
+
+#Adds a calculator in the tools menu
+ToolsPlugIn.calculator.title=Rechner
+ToolsPlugIn.calculator.toolTip=Öffnet einen Taschenrechner
