--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -1051,15 +1051,33 @@ persitencePlugin.load.error=Das Plugin zur Speicherung kann nicht geladen werden
 #A tip (in the welcome screen) that presents the Cloud functionnality
 Tip.10=<html>Greifen Sie von jedem beliebigen PC auf Ihre Daten zu.<hr style="width:40%">Im Speichern-Dialog erm\u00f6glicht Ihnen die Option <b>Dropbox</b>, Ihre Daten online in Ihrer Dropbox-Dateiverwaltung zu speichern und anschlie\u00dfend von jedem beliebigen PC mit Internet-Verbindung aus zu nutzen.<br><br>Dazu brauchen Sie nur einen Dropbox-Zugang, den Sie hier bekommen k\u00f6nnen: <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
 
+#Core JClop messages
+
 #Wordings related to the new file selection dialog
-URIChooserDialog.noFileSelected=Diese Schaltfl\u00e4che ist deaktiviert, weil keine Datei ausgew\u00e4hlt ist
-URIChooserDialog.openButton.title=\u00d6ffnen
-URIChooserDialog.saveButton.title=Speichern
+com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Diese Schaltfl\u00e4che ist deaktiviert, weil keine Datei ausgew\u00e4hlt ist
+com.fathzer.soft.jclop.URIChooserDialog.openButton.title=\u00d6ffnen
+com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Speichern
 
 #Wordings related to computer's storage tab of the file selection dialog.
-FileChooserPanel.title=Computer
-FileChooserPanel.tooltip.save=W\u00e4hlen Sie diese Registerkarte, um Daten auf Ihrem lokalen Arbeitsplatz zu speichern
-FileChooserPanel.tooltip.open=W\u00e4hlen Sie diese Registerkarte, um Daten von Ihrem lokalen Arbeitsplatz zu lesen
+com.fathzer.soft.jclop.FileChooserPanel.title=Computer
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=W\u00e4hlen Sie diese Registerkarte, um Daten auf Ihrem lokalen Arbeitsplatz zu speichern
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=W\u00e4hlen Sie diese Registerkarte, um Daten von Ihrem lokalen Arbeitsplatz zu lesen
+
+#Wordings related to data size units
+com.fathzer.soft.jclop.Generic.data.unit.bytes=Bytes
+com.fathzer.soft.jclop.Generic.data.unit.kBytes=KB
+com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
+com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
+
+com.fathzer.soft.jclop.Chooser.account=Konto: 
+#first argument is the available space, second is the unit
+com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} verf\u00fcgbar
+com.fathzer.soft.jclop.Chooser.refresh=Aktualisierung
+com.fathzer.soft.jclop.Chooser.refresh.tooltip=Klicken Sie diesen Button, um die Verzeichnisliste entsprechend Ihres Dropbox-Inhalts zu aktualisieren
+com.fathzer.soft.jclop.Chooser.fileName=Datei: 
+
+#end of core JClop messages
+
 
 #Wordings related to the dropbox tab of the file selection dialog
 dropbox.Chooser.ConnectionDialog.title=Verbindung zu Dropbox
@@ -1076,14 +1094,6 @@ dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Der Browser k
 dropbox.Chooser.read.tabTooltip=W\u00e4hlen Sie diese Registerkarte, um Daten aus Ihrer Dropbox zu laden
 dropbox.Chooser.save.tabTooltip=W\u00e4hlen Sie diese Registerkarte, um Daten in Ihrer Dropbox zu speichern
 dropbox.Chooser.connecting=Verbindung zu Dropbox ...
-dropbox.Chooser.account=Konto: {0}
-#first argument is the available space, second is the unit
-dropbox.Chooser.freeSpace={0}{1} verf\u00fcgbar
-dropbox.Chooser.refresh=Aktualisierung
-dropbox.Chooser.refresh.tooltip=Klicken Sie diesen Button, um die Verzeichnisliste entsprechend Ihres Dropbox-Inhalts zu aktualisieren
-dropbox.Chooser.disconnect=Verbindung trennen
-dropbox.Chooser.disconnect.tooltip=Cliquer ce bouton pour vous d\u00e9connecter du compte actuel et commencer le processus de connexion \u00e0 un autre compte
-dropbox.Chooser.selectedFile=Datei: 
 dropbox.Chooser.error.connectionFailed=<html>Die Verbindung zu Dropbox ist fehlgeschlagen.<br>Es scheint keine Internet-Verbindung zu bestehen.</html>
 
 #Wordings related to the synchronization with Dropbox
@@ -1093,12 +1103,6 @@ dropbox.downloading=Download von Dropbox ...
 dropbox.uploading=\u00dcbertragung zu Dropbox ...
 dropbox.download.action=Download der Daten von Dropbox zum Computer
 dropbox.upload.action=Upload der Daten vom Computer zu Dropbox
-
-#Wordings related to data size units
-Generic.data.unit.bytes=Bytes
-Generic.data.unit.kBytes=KB
-Generic.data.unit.MBytes=MB
-Generic.data.unit.GBytes=GB
 
 #Wordings related to general synchronization process
 synchronization.synchronizing=Synchronisierung ...
