--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1060,15 +1060,35 @@ persitencePlugin.load.error=Unable to load the persistence plugin {0}.
 #A tip (in the welcome screen) that presents the Cloud functionnality
 Tip.10=<html>Access your data from any computer.<hr style="width:40%">In save dialog, the <b>Dropbox</b> tab allows you to save data to your Dropbox account and then access it from any computer connected to the Internet.<br><br>To do this, you will need just a Dropbox account available here: <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
 
+#Core JClop messages
+
 #Wordings related to the new file selection dialog
-URIChooserDialog.noFileSelected=Este botão está desabilitado porque nenhum arquivo for selecionado
-URIChooserDialog.openButton.title=Abrir
-URIChooserDialog.saveButton.title=Salvar
+com.fathzer.soft.jclop.URIChooserDialog.noFileSelected=Este botão está desabilitado porque nenhum arquivo for selecionado
+com.fathzer.soft.jclop.URIChooserDialog.openButton.title=Abrir
+com.fathzer.soft.jclop.URIChooserDialog.saveButton.title=Salvar
 
 #Wordings related to computer's storage tab of the file selection dialog.
-FileChooserPanel.title=Computador
-FileChooserPanel.tooltip.save=Selecione este guia para salvar dados para o armazenamento local
-FileChooserPanel.tooltip.open=Selecione esta guia para ler dados do seu local de armazenamento
+com.fathzer.soft.jclop.FileChooserPanel.title=Computador
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.save=Selecione este guia para salvar dados para o armazenamento local
+com.fathzer.soft.jclop.FileChooserPanel.tooltip.open=Selecione esta guia para ler dados do seu local de armazenamento
+
+com.fathzer.soft.jclop.Chooser.account=Conta: 
+#first argument is the available space, second is the unit
+com.fathzer.soft.jclop.Chooser.freeSpace={0}{1} disponível
+com.fathzer.soft.jclop.Chooser.refresh=Refresh
+com.fathzer.soft.jclop.Chooser.refresh.tooltip=Clique neste botão para efetuar o refresh da lista de arquivos de acordo com o conteúdo do Dropbox
+com.fathzer.soft.jclop.Chooser.disconnect=Disconnecta
+com.fathzer.soft.jclop.Chooser.disconnect.tooltip=Clique neste botão para disconectar da conta atual e conectar à outra
+com.fathzer.soft.jclop.Chooser.fileName=Arquivo: 
+
+#Wordings related to data size units
+com.fathzer.soft.jclop.Generic.data.unit.bytes=bytes
+com.fathzer.soft.jclop.Generic.data.unit.kBytes=kB
+com.fathzer.soft.jclop.Generic.data.unit.MBytes=MB
+com.fathzer.soft.jclop.Generic.data.unit.GBytes=GB
+
+#end of core JClop messages
+
 
 #Wordings related to the dropbox tab of the file selection dialog
 dropbox.Chooser.ConnectionDialog.title=Conecta to Dropbox
@@ -1085,14 +1105,6 @@ dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Não foi possí
 dropbox.Chooser.read.tabTooltip=Selecione esta guia para ler dados na sua conta Dropbox
 dropbox.Chooser.save.tabTooltip=Selecione esta guia para salvar na sua conta Dropbox
 dropbox.Chooser.connecting=Conectando ao Dropbox...
-dropbox.Chooser.account=Conta: {0}
-#first argument is the available space, second is the unit
-dropbox.Chooser.freeSpace={0}{1} disponível
-dropbox.Chooser.refresh=Refresh
-dropbox.Chooser.refresh.tooltip=Clique neste botão para efetuar o refresh da lista de arquivos de acordo com o conteúdo do Dropbox
-dropbox.Chooser.disconnect=Disconnecta
-dropbox.Chooser.disconnect.tooltip=Clique neste botão para disconectar da conta atual e conectar à outra
-dropbox.Chooser.selectedFile=Arquivo: 
 dropbox.Chooser.error.connectionFailed=<html>Não foi possível conectar ao Dropbox.<br>Parece que você não está conectado a Internet</html>
 
 #Wordings related to the synchronization with Dropbox 
@@ -1103,11 +1115,6 @@ dropbox.uploading=Subindo para o Dropbox ...
 dropbox.download.action=Baixar dados do Dropbox para o computador
 dropbox.upload.action=Subir dados do computador para o Dropbox
 
-#Wordings related to data size units
-Generic.data.unit.bytes=bytes
-Generic.data.unit.kBytes=kB
-Generic.data.unit.MBytes=MB
-Generic.data.unit.GBytes=GB
 
 #Wordings related to general synchronization process
 synchronization.synchronizing=Sincronizando ...
